@@ -443,7 +443,7 @@
     "mamado_uncensored": "Suckled",
     "mamado": "Licked",
     "about-me": "About Me",
-    "api-down": "Yep, the Commands Server is Down! But dont worry! This text is to say that you incredible.",
+    "api-down": "This user has never used my commands lol",
     "commands-usage": "{{user}} used my commands {{usedCount}} times. His most used command was {{mostUsedCommandName}}, used {{mostUsedCommandCount}} times"
   },
   "top": {
