@@ -7,6 +7,7 @@ export type AvailableCardBackgroundThemes =
   | 'premium'
   | 'kawaii'
   | 'hello_kitty'
+  | 'nocturnal'
   | 'lamenta_caelorum';
 
 export type AvailableTableThemes =
@@ -27,6 +28,8 @@ export type AvailableProfilesThemes =
   | 'warrior'
   | 'fortification'
   | 'without_soul'
+  | 'sunflower'
+  | 'gallery'
   | 'id03'
   | 'gatito'
   | 'hello_kitty'
