@@ -5,6 +5,15 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).
 
+## [Rnreleased]
+
+### Changed
+
+- Todos os perfis foram alterados para mostrarem o título do usuário
+- O comando `/perfil` ficou mais rápido para os temas que não mostram o uso de comandos!
+- Os comandos `/8ball`, `/filosofia`, `/macetava` e `/astlolfo` ficaram bem mais rápidos!
+- O texto que aparece no perfil de quando alguém não tem dados de comandos foi alterado
+
 ## [5.10.0] - 2023-11-01
 
 ### Added
